Add slurms spawner

--- a/slurm_config/slurm.conf
+++ b/slurm_config/slurm.conf
@@ -47,4 +47,5 @@ ProctrackType=proctrack/pgid
 SlurmUser=root
 SlurmdUser=root
 
-MailProg=/bin/true
+KillWait=120    # Increase to give jobs more time to terminate before being forcibly killed
+UnkillableStepTimeout=120  # MailProg=/bin/true
