Reduce compute node resources
... and allow node config to differ from detected resources.

This avoids INVALID_REG state for node on starting slurmd.

--- a/slurm_config/slurm.conf
+++ b/slurm_config/slurm.conf
@@ -35,7 +35,7 @@ SlurmctldLogFile=/srv/slurm_logs/slurmctld.log
 SlurmdLogFile=/srv/slurm_logs/slurmd.log
 #
 # COMPUTE NODES
-NodeName=localhost CPUs=2 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 RealMemory=31700 State=UNKNOWN
+NodeName=localhost CPUs=2 Sockets=1 CoresPerSocket=2 ThreadsPerCore=1 RealMemory=1024 State=UNKNOWN
 PartitionName=debug Nodes=localhost Default=YES MaxTime=INFINITE State=UP
 
 # Authentication
@@ -49,3 +49,4 @@ SlurmdUser=root
 
 KillWait=120    # Increase to give jobs more time to terminate before being forcibly killed
 UnkillableStepTimeout=120  # MailProg=/bin/true
+SlurmdParameters=config_overrides  # Do not set node state to INVALID_REG if configuration does not match available resources
